# WhereChildBus

./: README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: deploy-to-gcloud.yml  deploy_cloudrun_machine_learning.yml  flutter-lint.yml  golangci-lint.yml
backend/: .env.example  .gitignore  Dockerfile  DockerfileLocal  Makefile  cloudbuild.yaml  cloudbuild.yml  docker-compose.yml  go.mod  go.sum
backend/cmd/client/: main.go
backend/config/: config.go
backend/docs/: README.md
backend/gprc_server/: grpc_server.go  option.go
backend/interfaces/: bus.go  bus_route.go  child.go  guardian.go  healthcheck.go  nursery.go  station.go
backend/proto/: buf.gen.yaml
backend/secrets/: gcp-credentials.json  gcp-credentials.json.enc
docs/: README.md  SystemArchitecture.drawio  branch-strategy.md  commit-strategy.md  directory-strategy.md  get-started.md
frontend/where_child_bus/: .gitignore  README.md  pubspec.yaml
machine_learning/: .gitignore  Dockerfile  dockerfile  pyproject.toml
machine_learning/src/face_detect_model/: config.yaml  gcp_util.py  main.py  pred.py  trainer.py  util.py
machine_learning/src/face_detect_model/DetectFaceAndClip/: detectFaceAndClip.py  detectFaceUtil.py
machine_learning/src/face_detect_model/data/: dataset.py  detectFaceAndClip.py  detectFaceUtil.py  faceDetectDataset.py  preprocess.py  util.py
machine_learning/src/face_detect_model/model/: faceDetectModel.py  model.py
machine_learning/src/proto-gen/: README.md
machine_learning/src/proto-gen/machine_learning/v1/: error_util.py  health_check_pb2_grpc.py  machine_learning_pb2.py  machine_learning_pb2.pyi  machine_learning_pb2_grpc.py  server.py
machine_learning/src/proto-gen/where_child_bus/: resources_pb2.py
machine_learning/src/proto-gen/where_child_bus/v1/: bus_pb2.py  bus_pb2.pyi  bus_pb2_grpc.py  child_pb2.py  child_pb2.pyi  child_pb2_grpc.py  child_photo_pb2.py  child_photo_pb2.pyi  child_photo_pb2_grpc.py  client.py  guardian_pb2.py  guardian_pb2.pyi  guardian_pb2_grpc.py  health_check_pb2.py  health_check_pb2_grpc.py  healthcheck.py  nursery_pb2.py  nursery_pb2_grpc.py  resources_pb2.py  resources_pb2.pyi  station_pb2.py  station_pb2.pyi  station_pb2_grpc.py
proto/: buf.gen.yaml
(+435 files in other folders)
