[project]
name = "wherechildbus"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Mizuki", email = "mbaba@kanolab.net" }
]
dependencies = [
    "opencv-python>=4.9.0.80",
    "torch>=2.2.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "wherechildbus:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/wherechildbus"]
